# hm_ipc

./: .gitignore  CMakeLists.txt  README.md
include/: hm_buffer.h  hm_ipc.h  parse_xml.h
sample/: hm_read.cpp  hm_write.cpp
src/: hm_buffer.cpp  hm_ipc.cpp  parse_xml.cpp
xml/: topic_info.xml
